# js-mate-poe

./: .eslintrc.json  .gitignore  .righteous-sandbox.json  CREDITS.md  Cargo.toml  README.md  build.rs  justfile  karma.conf.js  package.json  svgo.config.js  svgo.yaml
.github/workflows/: ci.yaml  msrv.yaml
skel/: playlist.txt
skel/firefox/: Dockerfile  README.txt  background.mjs  build.sh  foreground.mjs  imports-audio.mjs  is_real_object.mjs  manifest.json  options.css  options.html  options.mjs  settings.mjs  updates.json
skel/firefox/docker/: entrypoint.sh  nodesource.sources
skel/html/: index.html  tiles.html
skel/img/: poe.txt  poe.xcf  tiles.html
skel/js/: base64_to_uint8.mjs  base64_to_uint8array.mjs  entry.mjs  entrypoint.mjs  firefox-bg.js  firefox-fg.mjs  glue-extra.mjs  glue.patch  header.js  imports-audio.mjs  imports.mjs  js.patch  library.mjs
skel/scss/: _base.scss  _demo.scss  core.scss  tiles.scss
skel/sound/: baa.flac  baa.flac.apodite.json  encoding.md  sneeze.flac  sneeze.flac.apodite.json  yawn.flac  yawn.flac.apodite.json
src/: assets.rs  css.rs  dom.rs  lib.rs  position.rs  state.rs  universe.rs
src/animation/: frame.rs  mod.rs  scene.rs  scenes.rs  sound.rs
src/css/: 00.css  01.css  js-mate-poe.css
src/js/: 00.mjs  01.mjs  _about.mjs  _animations.mjs  _audio.mjs  _bin.mjs  _css.mjs  _demo_poe_animation.mjs  _demo_poe_frame.mjs  _demo_poe_icon.mjs  _demo_poe_sprite.mjs  _demo_poe_tree.mjs  _externs.js  _helpers.mjs  _image.mjs  _mate.mjs  _media.mjs  _poe.mjs  _types.mjs  animations.mjs  core.mjs  css.mjs  demo.mjs  helpers.mjs  image.mjs  js-mate-poe.mjs  mate.mjs
src/js/core/: animations.mjs  assets.mjs  base64_to_blob.mjs  choicelist.mjs  def.mjs  easing.mjs  framelist.mjs  mate.mjs  position.mjs  scenelist.mjs  standardize_choices.mjs
src/js/demo/: app-demo.mjs  app-director.mjs  app.mjs  externs.js  poe_animation.mjs  poe_frame.mjs  poe_icon.mjs  poe_sprite.mjs  poe_tree.mjs  vue.mjs
src/js/js-mate-poe/: _poe_mate_state.mjs  app.mjs  css.url.mjs  poe_flag.mjs
src/js/js-mate-poe-ce/: _poe_mate_state.mjs  app.mjs  poe_ce.mjs  poe_css.mjs  poe_flag.mjs
src/js/middleware/: assets.url.mjs  universe.browser.mjs
src/js/vue/: _demo_poe_animation.mjs  _demo_poe_frame.mjs  _demo_poe_icon.mjs  _demo_poe_sprite.mjs  _demo_poe_tree.mjs
src/mate/: flags.rs  mod.rs
src/scss/: _base.scss  demo.scss  director.scss  js-mate-poe-ce.scss  js-mate-poe.scss
src/skel/: _css.mjs  css.js-mate-poe.mjs  css.mjs  header.min.js  js-mate-poe.min.js
test/: animations.js  choicelist.js  framelist.js  helpers.js  mate.js  position.js  scenelist.js
