[package]
name = "rs_mate_poe"
version = "1.6.5"
authors = ["Blobfolio, LLC. <hello@blobfolio.com>"]
edition = "2021"
rust-version = "1.70"
description = "WASM port of Screen Mate Poe."
license = "WTFPL"
repository = "https://github.com/Blobfolio/js-mate-poe"
readme = "README.md"
publish = false

[package.metadata.bashman]
name = "RS Mate Poe"
bash-dir = "./"
man-dir = "./"
credits-dir = "./"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
guff_css = "=0.2.12"
imagesize = "=0.12.0"

[dependencies]
itoa = "=1.0.10"
js-sys = "=0.3.68"
wasm-bindgen = "=0.2.91"

[dependencies.web-sys]
version = "=0.3.68"
features = [
	"AddEventListenerOptions",
	"Blob",
	"BlobPropertyBag",
	"CssStyleDeclaration",
	"Document",
	"DomTokenList",
	"Element",
	"Event",
	"EventTarget",
	"HtmlAudioElement",
	"HtmlElement",
	"HtmlImageElement",
	"MouseEvent",
	"ShadowRoot",
	"ShadowRootInit",
	"ShadowRootMode",
	"Url",
	"VisibilityState",
	"Window",
]

[features]
default = []

# The Firefox browser extension handles audio differently, and has no dblclick
# event listener. Note: do not enable this in conjunction with other features!
firefox = ["web-sys/Node"]

# The director mode exposes additional browserland methods to make it easier to
# preview and debug animations, like Poe.play and Poe.speed.
director = ["web-sys/console"]

[profile.release]
lto = true
codegen-units = 1
strip = true
