[package]
name = "rs_mate_poe"
version = "1.11.0"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2024"
rust-version = "1.90"
description = "WASM port of Screen Mate Poe."
license = "WTFPL"
repository = "https://github.com/Blobfolio/js-mate-poe"
readme = "README.md"
publish = false

[package.metadata.bashman]
name = "RS Mate Poe"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
guff_css = "=0.11.0"

[build-dependencies.imagesize]
version = "=0.14.0"
default-features = false
features = [ "png" ]

[dev-dependencies]
wasm-bindgen-test = "0.3.*"

[dependencies]
js-sys = "=0.3.81"
wasm-bindgen = "=0.2.104"

[dependencies.web-sys]
version = "=0.3.81"
features = [
	"AddEventListenerOptions",
	"Blob",
	"BlobPropertyBag",
	"CssStyleDeclaration",
	"Document",
	"DomTokenList",
	"Element",
	"Event",
	"EventTarget",
	"HtmlAudioElement",
	"HtmlElement",
	"HtmlImageElement",
	"MouseEvent",
	"ShadowRoot",
	"ShadowRootInit",
	"ShadowRootMode",
	"Url",
	"VisibilityState",
	"Window",
]

[features]
default = []

# The Firefox browser extension handles audio differently, and has no dblclick
# event listener. Note: do not enable this in conjunction with other features!
firefox = ["web-sys/Node"]

# The director mode exposes additional browserland methods to make it easier to
# preview and debug animations, like Poe.play and Poe.speed.
director = ["web-sys/console"]

[profile.release]
lto = true
codegen-units = 1
strip = true
